# Capstone_Project

./: Cleaned_Data.csv  DA_DS_Data.csv  Filtered_Data.csv  README.md  data.ipynb  fdata.csv  pyproject.toml  skills.csv
tests/: test_cp.py
